--- a/ApiTester-JS/public/index.html
+++ b/ApiTester-JS/public/index.html
@@ -11,8 +11,9 @@
   </style>
 </head>
 <body>
-  <h1>API 自动化测试界面</h1>
-  <button id="run">运行测试</button>
+  <h1>
+API automated testing interface</h1>
+  <button id="run">Run Tests</button>
   <pre id="output"></pre>
 
   <script>
